--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
   <string name="color_scene">color</string>
   <string name="image_filter_one_scene">image filter I</string>
   <string name="image_filter_two_scene">image filter II</string>
+  <string name="keyset_one_scene">keyset I</string>
 </resources>
